fix(backend): apply batch 2 backend data integrity updates (file move deduplication, websocket limits, processFile transactions)