@@ -11,11 +11,13 @@ import org.springframework.messaging.simp.stomp.StompCommand;
 import org.springframework.messaging.simp.stomp.StompHeaderAccessor;
 import org.springframework.messaging.support.ChannelInterceptor;
 import org.springframework.messaging.support.MessageHeaderAccessor;
+import org.springframework.messaging.MessagingException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.Set;
 
 @Slf4j
 @Component
@@ -23,48 +25,89 @@ import java.util.List;
 @RequiredArgsConstructor
 public class WebSocketAuthInterceptor implements ChannelInterceptor {
 
+    private static final String BEARER_PREFIX = "Bearer ";
+    private static final Set<String> ALLOWED_DEST_PREFIXES = Set.of("/topic/", "/user/queue/");
+
     private final JwtUtils jwtUtils;
 
     @Override
     public Message<?> preSend(Message<?> message, MessageChannel channel) {
         StompHeaderAccessor accessor = MessageHeaderAccessor.getAccessor(message, StompHeaderAccessor.class);
+        if (accessor == null || accessor.getCommand() == null) {
+            return message;
+        }
 
-        if (accessor != null && StompCommand.CONNECT.equals(accessor.getCommand())) {
-            List<String> authHeaders = accessor.getNativeHeader("Authorization");
-
-            if (authHeaders == null || authHeaders.isEmpty()) {
-                log.debug("WebSocket connection rejected: No Authorization header");
-                throw new IllegalArgumentException("Missing Authorization header");
-            }
-
-            String token = authHeaders.getFirst().replace("Bearer ", "");
-            Authentication auth = authenticateToken(token);
-
-            if (auth == null) {
-                log.debug("WebSocket connection rejected: Invalid token");
-                throw new IllegalArgumentException("Invalid Authorization token");
-            }
-
-            accessor.setUser(auth);
-            log.debug("WebSocket authentication successful for user: {}", auth.getName());
+        switch (accessor.getCommand()) {
+            case CONNECT    -> handleConnect(accessor);
+            case SUBSCRIBE  -> validateSubscription(accessor);
+            case SEND       -> rejectSend(accessor);
+            case DISCONNECT -> log.debug("Client disconnected: {}", accessor.getUser());
+            default         -> { /* pass through */ }
         }
 
         return message;
     }
 
+    private void handleConnect(StompHeaderAccessor accessor) {
+        List<String> authHeaders = accessor.getNativeHeader("Authorization");
+        if (authHeaders == null || authHeaders.isEmpty()) {
+            throw new MessagingException("Missing Authorization header");
+        }
+
+        String raw = authHeaders.getFirst().trim();
+        if (!raw.startsWith(BEARER_PREFIX)) {
+            throw new MessagingException("Malformed Authorization header");
+        }
+
+        String token = raw.substring(BEARER_PREFIX.length());
+        Authentication auth = authenticateToken(token);
+        if (auth == null) {
+            throw new MessagingException("Invalid or expired token");
+        }
+
+        accessor.setUser(auth);
+        log.debug("WebSocket authenticated: {}", auth.getName());
+    }
+
+    private void validateSubscription(StompHeaderAccessor accessor) {
+        requireAuthenticated(accessor);
+
+        String destination = accessor.getDestination();
+        if (destination == null || destination.contains("..")) {
+            throw new MessagingException("Invalid subscription destination");
+        }
+
+        boolean allowed = ALLOWED_DEST_PREFIXES.stream().anyMatch(destination::startsWith);
+        if (!allowed) {
+            log.warn("Subscription rejected: user={} dest='{}'", accessor.getUser(), destination);
+            throw new MessagingException("Destination '" + destination + "' is not allowed");
+        }
+    }
+
+    private void rejectSend(StompHeaderAccessor accessor) {
+        log.warn("SEND rejected: user={} dest='{}'", accessor.getUser(), accessor.getDestination());
+        throw new MessagingException("Client SEND is not permitted");
+    }
+
+    private void requireAuthenticated(StompHeaderAccessor accessor) {
+        if (accessor.getUser() == null) {
+            throw new MessagingException("Not authenticated");
+        }
+    }
+
     private Authentication authenticateToken(String token) {
-        if (token == null || token.trim().isEmpty()) {
+        if (token == null || token.isBlank()) {
             return null;
         }
         try {
             if (jwtUtils.validateToken(token)) {
                 String username = jwtUtils.extractUsername(token);
-                if (username != null && !username.trim().isEmpty()) {
-                    return new UsernamePasswordAuthenticationToken(username, null, null);
+                if (username != null && !username.isBlank()) {
+                    return new UsernamePasswordAuthenticationToken(username, null, List.of());
                 }
             }
         } catch (Exception e) {
-            log.debug("Token authentication failed", e);
+            log.debug("Token validation failed: {}", e.getMessage());
         }
         return null;
     }
